--- a/Ip project/Car-Sales/asset/carSales.css
+++ b/Ip project/Car-Sales/asset/carSales.css
@@ -101,7 +101,7 @@ nav ul li a:hover{
     margin-bottom: 3%;
 }
 .content select option{
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Genos', sans-serif;
 }    
 
 .content button {
