--- a/Ip project/Car-Sales/asset/inventory.css
+++ b/Ip project/Car-Sales/asset/inventory.css
@@ -7,6 +7,44 @@
     padding: 0;
 }
 
+nav {
+    width: 90%;
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 20px 8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2%;
+}
+nav h2 {
+    color: #fff;
+    font-family: 'Rubik Maps', system-ui;
+    font-size: 26px;
+    letter-spacing: 8px ;
+    cursor: pointer;
+}
+
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    margin-left: 15px;        
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Rubik Maps', system-ui;
+    font-size: 15px;
+    transform: font-size 0.5s;
+    cursor: pointer;
+}
+
+nav ul li a:hover{
+    font-size: 17px;
+}
+
 .content {
     text-align: center;
     position: relative;
@@ -24,7 +62,10 @@
     font-family: 'Genos', sans-serif;
     margin-bottom: 4.5rem;
 }
+
+
 .content form {
+    
     padding: 20px 2%;
     color: #fff;
     min-width: 350px;
@@ -56,7 +97,7 @@
 
 }
 .content select option{
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Genos', sans-serif;
     color: #fff;
 }    
 
@@ -181,6 +222,64 @@ body {
     padding: 10px 0 0 10px;
     font-size: 17px;
 }
+
+footer {
+    background: linear-gradient(5deg,#0a3556, #03253f);
+    color:#fff;
+    width: 100%;
+    margin-top: 7%px;
+    padding: 10px;
+    text-align: center;
+}
+
+footer h1 {
+    font-size: 70px;
+    font-family: 'Rubik Maps', system-ui;
+    letter-spacing: 8px;
+    padding-top: 4%;
+    padding-bottom: 2%;
+}
+
+footer p {
+    font-size: 23px;
+    color: #9e9898;
+}
+
+footer .social-media {
+    padding: 15px 10px;
+}
+
+.social-media i {
+    margin-left: 2px;
+    padding: 8px 10px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.social-media i:hover {
+    background: #fff;
+    color: #0a3556;
+    border-radius: 3600px;
+}
+
+footer hr {
+    margin: 14px;
+    width: 50%;
+    margin-left: 25%;
+}
+
+.tel p {
+    font-size: 23;
+}
+footer label {
+    text-align: center;
+    font-size: 23px;
+}
+
+label span {
+    color: rgb(208, 22, 22);
+}
+
 
 footer {
     background: linear-gradient(5deg,#0a3556, #03253f);
