--- a/Ip project/Car-Sales/asset/contactus.css
+++ b/Ip project/Car-Sales/asset/contactus.css
@@ -108,7 +108,7 @@ footer {
   background: linear-gradient(5deg,#0a3556, #03253f);
   color:#fff;
   width: 100%;
-  margin-top: 7%px;
+  margin-top: 7%;
   padding: 10px;
   text-align: center;
 }
