--- a/Ip project/Car-Sales/asset/contactus.css
+++ b/Ip project/Car-Sales/asset/contactus.css
@@ -144,26 +144,35 @@ footer .social-media {
 }
 
 footer {
-  display: block;
   background: linear-gradient(5deg,#0a3556, #03253f);
   color:#fff;
   width: 100%;
-  margin-top: 7%px;
-  padding: 10px;
+  margin-top: 7%;
   text-align: center;
 }
 
 footer h1 {
-  font-size: 70px;
-  font-family: 'Rubik Maps', system-ui;
+  font-size: 50px;
+  font-family: genos;
   letter-spacing: 8px;
   padding-top: 4%;
   padding-bottom: 2%;
 }
 
-footer p {
-  font-size: 23px;
-  color: #9e9898;
+
+footer .footerDetails {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+footer .footerDetails .address ul{
+  list-style: none;
+}
+
+.address ul li {
+  padding: 10px;
+  font-family: genos;
+  font-size: 18px;
 }
 
 footer .social-media {
@@ -188,11 +197,8 @@ footer hr {
   width: 50%;
   margin-left: 25%;
 }
-
-.tel p {
-  font-size: 23;
-}
 footer label {
+  font-family: 'poor story';
   text-align: center;
   font-size: 23px;
 }
