modified:   Ip project/Car-Sales/asset/detail.css 	modified:   Ip project/Car-Sales/pages/detail.htm 	modified:   Ip project/Car-Sales/pages/detail_2.htm 	modified:   Ip project/Car-Sales/pages/detail_3.htm 	modified:   Ip project/Car-Sales/pages/detail_4.htm

--- a/Ip project/Car-Sales/asset/detail.css
+++ b/Ip project/Car-Sales/asset/detail.css
@@ -12,7 +12,7 @@ nav {
     justify-content: space-between;
     margin-top: 2%;
 }
-nav h2 {
+nav #h2 {
     color: #000;
     font-family: 'Rubik Maps', system-ui;
     font-size: 26px;
@@ -203,4 +203,168 @@ footer label {
 
 label span {
     color: rgb(208, 22, 22);
+}
+
+
+@media (max-width:962px) {
+    nav{
+        padding:0 5px 0
+    }
+    nav #h1{
+        font-size: 20px;
+    }
+}
+
+@media (max-width:950px) {
+    .checkbtn {
+        display: inline;
+        float: right;
+        margin-right: 1.5rem;
+    }
+    nav ul {
+        position: fixed;
+        width: 50%;
+        height: 100vh;
+        top: 80px;
+        right: -100%;
+        border-radius: 10px;
+        text-align: center;
+        padding-top: 2%;
+        background: linear-gradient(145deg,#0a3556, #9e9898);
+        transition: all 1s;
+    }
+    nav ul li {
+        margin: 50px 0;
+        display: block;
+        line-height: 30px;
+    }
+
+    nav ul li a {
+        color: #9e9898;
+        font-size: 19px;
+    }
+    nav ul li a:hover {
+        color: #fff;
+    }
+
+    #check:checked ~ nav ul {
+        right: .5rem; 
+    }
+
+    .header {
+        font-size: 20px;
+    }
+
+    .car-details {
+        display: block;
+    }
+
+    .img-container {
+        width: 500px;
+        height: 400px;
+        margin-left: 12%;
+    }
+
+    .slide{
+        gap: 13px;
+    }
+    
+
+    .slide .cascade {
+        width: 500px;
+        height: 400px;
+    }
+
+
+    .details {
+        text-align: center;
+        margin: 5px 6%px;
+        padding: 10px 2%;
+    }
+    
+    .details h1 {
+        font-size: 31px;
+    }
+    
+    .details p {
+        font-size: 28px;
+    }
+    
+    .spec {
+        width: 300px;
+        margin: 5% 23%;
+        padding: 2px 15px;
+    }
+    
+    
+    .spec ul li {
+        font-size: 25px;
+        padding: 10px;
+    }
+    
+    .details a {
+        padding: 10px 30px;
+        font-size: 18px;
+    }
+    
+    .details a:hover {
+        padding: 15px 35px;
+    }
+
+
+    /*footer part*/
+footer {
+    margin-top: 2%;
+}
+
+footer h1 {
+    font-size: 40px;
+    padding-top: 4%;
+    padding-bottom: 1%;
+}
+
+footer p {
+    font-size: 18px;
+}
+
+footer .social-media {
+    padding: 10px 8px;
+}
+
+.social-media i {
+    margin-left: 2px;
+    padding: 6px 6px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.social-media i:hover {
+    background: #fff;
+    color: #0a3556;
+    border-radius: 3600px;
+}
+
+footer hr {
+    margin: 14px;
+    width: 50%;
+    margin-left: 25%;
+}
+footer label {
+    text-align: center;
+    font-size: 23px;
+}
+}
+
+
+@media (max-width:495) {
+    .img-container {
+        width: 100px;
+        height: 200px;
+        margin-left: 12%;
+    }
+
+    .slide .cascade {
+        width: 100px;
+        height: 200px;
+    }
 }
