--- a/Ip project/Car-Sales/asset/carSales.css
+++ b/Ip project/Car-Sales/asset/carSales.css
@@ -14,6 +14,7 @@ body {
     position: static;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 
 .video-container video {
@@ -23,7 +24,8 @@ body {
     transform: translate(-50%, -50%);
     min-width: 100%;
     min-height: 100%;
-    z-index: -1;
+    z-index: 1;
+    object-fit: cover;
 }
 
 nav {
@@ -36,6 +38,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     margin-top: 2%;
+    z-index: 1;
 }
 nav h2 {
     color: #fff;
@@ -65,8 +68,9 @@ nav ul li a:hover{
 }
 
 .content {
-    text-align: center;
     position: relative;
+    text-align: center;
+    z-index: 1;
     margin-top: 10%;
 }
 
@@ -153,7 +157,7 @@ nav ul li a:hover{
     display: flex;
     align-items: left;
     flex-wrap: wrap;
-    margin: 1% 8%;
+    margin: 1% 4%;
 }
 
 .car-content {
@@ -272,3 +276,26 @@ footer {
   label span {
     color: rgb(208, 22, 22);
   }
+
+@media only screen and (max-width: 768px) {
+    .content h1 {
+        font-size: 50px;
+    }
+
+    .content h2 {
+        font-size: 30px;
+    }
+
+    .car-content {
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    .content form {
+        padding: 5px;
+    }
+
+    .car-list {
+        margin: 1% 0;
+    }
+}
