--- a/Ip project/Car-Sales/asset/detail.css
+++ b/Ip project/Car-Sales/asset/detail.css
@@ -203,7 +203,7 @@ label span {
 
 /*for the mobile responsiveness*/
 .checkbtn {
-    font-size: 30px;
+    font-size: 20px;
     display: none;
     cursor: pointer;
 }
@@ -217,19 +217,19 @@ label span {
         padding:0 5px 0
     }
     nav #h1{
-        font-size: 20px;
+        font-size: 16px;
     }
 }
 
-@media (max-width:768px) {
+@media (max-width:900px) {
     .checkbtn {
         display: inline;
         float: right;
-        margin-right: 1.5rem;
+        margin-right: 2%;
     }
     nav ul {
         position: fixed;
-        width: 50%;
+        width: 40%;
         height: 100vh;
         top: 80px;
         right: -100%;
@@ -238,6 +238,7 @@ label span {
         padding-top: 2%;
         background: linear-gradient(145deg,#0a3556, #9e9898);
         transition: all 1s;
+        z-index: 1;
     }
     nav ul li {
         margin: 50px 0;
@@ -247,7 +248,7 @@ label span {
 
     nav ul li a {
         color: #9e9898;
-        font-size: 19px;
+        font-size: 16px;
     }
     nav ul li a:hover {
         color: #fff;
@@ -258,7 +259,8 @@ label span {
     }
 
     .header {
-        font-size: 20px;
+        font-size: 15px;
+        margin-left: -3rem;
     }
 
     .car-details {
@@ -268,7 +270,7 @@ label span {
     .img-container {
         width: 500px;
         height: 400px;
-        margin-left: 12%;
+        margin: auto;
     }
 
     .slide{
@@ -284,7 +286,7 @@ label span {
 
     .details {
         text-align: center;
-        margin: 5px 6%px;
+        margin: 5px 6%;
         padding: 10px 2%;
     }
     
@@ -362,7 +364,7 @@ footer label {
 }
 
 
-@media (max-width:495) {
+@media (max-width:495) {    
     .img-container {
         width: 100px;
         height: 200px;
