modified:   Ip project/Car-Sales/asset/carSales.css 	modified:   Ip project/Car-Sales/pages/carSales.html

--- a/Ip project/Car-Sales/asset/carSales.css
+++ b/Ip project/Car-Sales/asset/carSales.css
@@ -40,7 +40,7 @@ nav {
     margin-top: 2%;
     z-index: 1;
 }
-nav h2 {
+nav #h2 {
     color: #fff;
     font-family: 'Rubik Maps', system-ui;
     font-size: 26px;
@@ -298,4 +298,106 @@ footer {
     .car-list {
         margin: 1% 0;
     }
+}
+
+/*for the mobile responsiveness*/
+.checkbtn {
+    font-size: 20px;
+    display: none;
+    cursor: pointer;
+    color: #fff;
+}
+
+#check {
+    display: none;
+}
+
+@media (max-width:962px) {
+    nav{
+        padding:0 5px 0
+    }
+    nav #h2{
+        font-size: 16px;
+        margin: 1rem 2rem;
+    }
+}
+
+@media (max-width:900px) {
+    .checkbtn {
+        display: inline;
+        float: right;
+        margin-right: 2%;
+    }
+    nav ul {
+        position: fixed;
+        width: 40%;
+        height: 100vh;
+        top: 80px;
+        right: -100%;
+        border-radius: 10px;
+        text-align: center;
+        padding-top: 2%;
+        background: linear-gradient(145deg,#0a3556, #9e9898);
+        transition: all 1s;
+        z-index: 1;
+    }
+    nav ul li {
+        margin: 50px 0;
+        display: block;
+        line-height: 30px;
+    }
+
+    nav ul li a {
+        color: #9e9898;
+        font-size: 16px;
+    }
+    nav ul li a:hover {
+        color: #fff;
+    }
+
+    #check:checked ~ nav ul {
+        right: .5rem; 
+    }
+
+    /*footer part*/
+    footer {
+        margin-top: 2%;
+    }
+
+    footer h1 {
+        font-size: 40px;
+        padding-top: 4%;
+        padding-bottom: 1%;
+    }
+
+    footer p {
+        font-size: 18px;
+    }
+
+    footer .social-media {
+        padding: 10px 8px;
+    }
+
+    .social-media i {
+        margin-left: 2px;
+        padding: 6px 6px;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .social-media i:hover {
+        background: #fff;
+        color: #0a3556;
+        border-radius: 3600px;
+    }
+
+    footer hr {
+        margin: 14px;
+        width: 50%;
+        margin-left: 25%;
+    }
+    footer label {
+        text-align: center;
+        font-size: 23px;
+}
 }
