--- a/Ip project/Car-Sales/asset/carSales.css
+++ b/Ip project/Car-Sales/asset/carSales.css
@@ -5,7 +5,9 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
 body {
     overflow-x: hidden;
 }
@@ -38,8 +40,9 @@ nav {
     align-items: center;
     justify-content: space-between;
     margin-top: 2%;
-    z-index: 1;
+    z-index: 2;
 }
+
 nav #h2 {
     color: #fff;
     font-family: 'Rubik Maps', system-ui;
@@ -48,10 +51,11 @@ nav #h2 {
     cursor: pointer;
 }
 
-nav ul li{
+
+nav ul li {
     list-style: none;
     display: inline-block;
-    margin-left: 15px;        
+    margin-left: 15px;
 }
 
 nav ul li a {
@@ -63,7 +67,7 @@ nav ul li a {
     cursor: pointer;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     font-size: 17px;
 }
 
@@ -98,7 +102,8 @@ nav ul li a:hover{
     padding: 20px 2%;
     color: #333;
     background: #fff;
-    min-width: 300px;
+    width: 90%; /* Adjusted to 90% */
+    max-width: 400px; /* Added max-width to prevent it from stretching too wide */
     font-size: 20px;
     border-radius: 8px;
     font-family: 'Genos', sans-serif;
@@ -106,7 +111,8 @@ nav ul li a:hover{
     border: none;
     outline: none;
 }
-.content select option{
+
+.content select option {
     font-family: 'Genos', sans-serif;
 }    
 
@@ -117,19 +123,21 @@ nav ul li a:hover{
     background: #ffa500;
     padding-top: 10px;
     padding-bottom: 5px;
+    width: 90%; /* Adjusted to 90% */
+    max-width: 400px; /* Added max-width to prevent it from stretching too wide */
 }
 
 .content form {
     padding: 5px 5px 5px 100px;
     color: #fff;
-    min-width: 350px;
+    width: 90%; /* Adjusted to 90% */
+    max-width: 400px; /* Added max-width to prevent it from stretching too wide */
     font-size: 32px;
     font-family: 'Genos', sans-serif;
     display: inline-block;
 }
 
-.content form fieldset #search-part
-{
+.content form fieldset #search-part {
     color: #000;
     font-family: 'Genos', sans-serif;
     padding: 20px 15%;
@@ -139,12 +147,11 @@ nav ul li a:hover{
     outline: none;
 }
 
-.content form fieldset
-{
+.content form fieldset {
     border: 0px;
 }
 
-.FEATURED{
+.FEATURED {
     margin: 12% 10%;
     font-family: 'Rubik Maps', system-ui;
     font-size: 37px;
@@ -164,9 +171,10 @@ nav ul li a:hover{
     background: var(--dark-mode);
     color: #fff;
     overflow: hidden;
-    width: 550px;
+    width: 90%; /* Adjusted to 90% */
+    max-width: 400px; /* Added max-width to prevent it from stretching too wide */
     border-radius: 14px;
-    margin: 10px 15px;
+    margin: 10px auto; /* Centering the element */
     text-align: center;
     cursor: pointer;
     transition: box-shadow 0.5s;    
@@ -182,9 +190,9 @@ nav ul li a:hover{
 }
 
 .car-content img {
-     width: 100%;
-     height: 50%;
-     object-fit: cover;
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
 }
 
 .car-content p {
@@ -192,7 +200,7 @@ nav ul li a:hover{
     font-size: 25px;
 }
  
-.car-content label{
+.car-content label {
     font-size: 26px;
     font-weight: bold;
     padding: 10px 23px;
@@ -202,12 +210,12 @@ nav ul li a:hover{
 .car-content hr {
     background: #0a3556;
     width: 90%;
-    margin: 5px 15px;
+    margin: 5px auto;
 }
 
-.car-content ul li{
+.car-content ul li {
     align-items: center;
-    display:inline-block;
+    display: inline-block;
     margin: 10px 0 0 12px;
     padding: 10px 0 0 10px;
     font-size: 17px;
@@ -215,67 +223,67 @@ nav ul li a:hover{
 
 footer {
     background: linear-gradient(5deg,#0a3556, #03253f);
-    color:#fff;
+    color: #fff;
     width: 100%;
     margin-top: 7%;
     text-align: center;
-  }
-  
-  footer h1 {
+}
+
+footer h1 {
     font-size: 50px;
     font-family: genos;
     letter-spacing: 8px;
     padding-top: 4%;
     padding-bottom: 2%;
-  }
-  
-  
-  footer .footerDetails {
+}
+
+footer .footerDetails {
     display: flex;
     justify-content: space-evenly;
-  }
-  
-  footer .footerDetails .address ul{
+}
+
+footer .footerDetails .address ul {
     list-style: none;
-  }
-  
-  .address ul li {
+}
+
+.address ul li {
     padding: 10px;
     font-family: genos;
     font-size: 18px;
-  }
-  
-  footer .social-media {
+}
+
+footer .social-media {
     padding: 15px 10px;
-  }
-  
-  .social-media i {
+}
+
+.social-media i {
     margin-left: 2px;
     padding: 8px 10px;
     color: #fff;
     cursor: pointer;
-  }
-  
-  .social-media i:hover {
+}
+
+.social-media i:hover {
     background: #fff;
     color: #0a3556;
     border-radius: 3600px;
-  }
-  
-  footer hr {
+}
+
+footer hr {
     margin: 14px;
     width: 50%;
     margin-left: 25%;
-  }
-  footer label {
+}
+
+footer label {
     font-family: 'poor story';
     text-align: center;
     font-size: 23px;
-  }
-  
-  label span {
+}
+
+label span {
     color: rgb(208, 22, 22);
-  }
+}
 
 @media only screen and (max-width: 768px) {
     .content h1 {
@@ -313,24 +321,32 @@ footer {
 }
 
 @media (max-width:962px) {
-    nav{
-        padding:0 5px 0
+    .video-container video{
+        max-width: 100%;
     }
-    nav #h2{
+    nav {
+        padding: 0 5px 0;
+        z-index: 2;
+    }
+    nav #h2 {
         font-size: 16px;
         margin: 1rem 2rem;
     }
 }
 
 @media (max-width:900px) {
+    
     .checkbtn {
+        position: relative;
         display: inline;
         float: right;
         margin-right: 2%;
+        z-index: 2;
     }
-    nav ul {
+    #menu ul {
         position: fixed;
-        width: 40%;
+        width: 80%; /* Adjusted to 80% of the screen width */
+        max-width: 400px; /* Added max-width to prevent it from stretching too wide */
         height: 100vh;
         top: 80px;
         right: -100%;
@@ -339,24 +355,27 @@ footer {
         padding-top: 2%;
         background: linear-gradient(145deg,#0a3556, #9e9898);
         transition: all 1s;
-        z-index: 1;
+        z-index: 2;
     }
-    nav ul li {
+    #menu ul li {
         margin: 50px 0;
         display: block;
         line-height: 30px;
+        z-index: 2;
     }
 
-    nav ul li a {
+    #menu ul li a {
         color: #9e9898;
         font-size: 16px;
+        z-index: 2;
     }
-    nav ul li a:hover {
+    #menu ul li a:hover {
         color: #fff;
+        z-index: 2;
     }
 
-    #check:checked ~ nav ul {
-        right: .5rem; 
+    #check:checked ~ #menu ul {
+        right: 0; /* Adjusted to 0 */
     }
 
     /*footer part*/
@@ -399,5 +418,5 @@ footer {
     footer label {
         text-align: center;
         font-size: 23px;
-}
+    }
 }
