--- a/Ip project/Car-Sales/asset/carSales.css
+++ b/Ip project/Car-Sales/asset/carSales.css
@@ -330,7 +330,7 @@ label span {
     }
     nav #h2 {
         font-size: 16px;
-        margin: 1rem 2rem;
+        margin-left: 1rem;
     }
 }
 
@@ -341,6 +341,7 @@ label span {
         display: inline;
         float: right;
         margin-right: 2%;
+        margin-top: 2%;
         z-index: 2;
     }
     #menu ul {
