--- a/Ip project/Car-Sales/asset/contactus.css
+++ b/Ip project/Car-Sales/asset/contactus.css
@@ -2,18 +2,44 @@ body {
     font-family: Arial, sans-serif;
 }
 .header {
-    background-color: rgb(230, 78, 23);
-    color : white;
+    background-color: rgb(89, 87, 86);
+    color : #fff;
     text-align : center;
     padding: 6%;
 }
 .contact-info {
     width: 100%;
     margin: 0 auto;
-/*     float: left;
-    width: 20%;
-    margin-left: 100px; */
 }
+
+nav #h2 {
+  color: #131316;
+  font-family: 'Rubik Maps', system-ui;
+  font-size: 26px;
+  letter-spacing: 8px ;
+  cursor: pointer;
+}
+
+
+nav ul li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #131316;
+  font-family: 'Rubik Maps', system-ui;
+  font-size: 15px;
+  transform: font-size 0.5s;
+  cursor: pointer;
+}
+
+nav ul li a:hover {
+  font-size: 17px;
+}
+
 
 .text-with-line {
     position: relative;
@@ -56,16 +82,11 @@ body {
   }
 
   .contact-form {
-    /* float: right; */
     background-color: #f5f5f5;
-/*     padding: 1rem 5rem 1rem 5rem; */
-    padding: 20px;
-      
+    padding: 20px;      
     border-radius: 5px;
     width: 100%;
-/*     width: 30%; */
     margin: 0 auto;
-/*     margin-right: 140px; */
     box-sizing: border-box;
   }
   
@@ -101,13 +122,6 @@ body {
   }
 
 
-.footer {
-    background-color: black;
-    color: white;
-    clear: both;
-    text-align: center;
-    padding: 10px;
-}
 
 footer {
   background: linear-gradient(5deg,#0a3556, #03253f);
