modified:   Ip project/Car-Sales/asset/carSales.css 	modified:   Ip project/Car-Sales/asset/contactus.css 	modified:   Ip project/Car-Sales/asset/detail.css 	modified:   Ip project/Car-Sales/asset/inventory.css 	modified:   Ip project/Car-Sales/asset/upload.css 	modified:   Ip project/Car-Sales/pages/detail.htm 	modified:   Ip project/Car-Sales/pages/detail_2.htm 	modified:   Ip project/Car-Sales/pages/detail_3.htm 	modified:   Ip project/Car-Sales/pages/detail_4.htm 	modified:   Ip project/Car-Sales/pages/upload.html

--- a/Ip project/Car-Sales/asset/carSales.css
+++ b/Ip project/Car-Sales/asset/carSales.css
@@ -349,12 +349,11 @@ label span {
         width: 80%; /* Adjusted to 80% of the screen width */
         max-width: 400px; /* Added max-width to prevent it from stretching too wide */
         height: 100vh;
-        top: 80px;
         right: -100%;
+        top: 45px;
         border-radius: 10px;
         text-align: center;
-        padding-top: 2%;
-        background: linear-gradient(145deg,#0a3556, #9e9898);
+        background: linear-gradient(145deg,#131316, #403838);
         transition: all 1s;
         z-index: 2;
     }
