--- a/Ip project/Car-Sales/asset/inventory.css
+++ b/Ip project/Car-Sales/asset/inventory.css
@@ -350,26 +350,28 @@ label span {
         display: inline;
         float: right;
         margin-right: 3%;
+        margin-top: 2rem;
     }
     
     nav{
-        padding:0 5px 0
+        padding:0 5px 2rem;
     }
 
     nav #h2 {
         font-size: 16px;
         margin-left: 1rem;
+        margin-top: 2rem;
     }
     nav ul {
         position: fixed;
         width: 40%;
         height: 100vh;
-        top: 80px;
+        top: 70px;
         right: -100%;
         border-radius: 10px;
         text-align: center;
         padding-top: 2%;
-        background: linear-gradient(145deg,#0a3556, #9e9898);
+        background: linear-gradient(145deg,#131316, #403838);
         transition: all 1s;
         z-index: 1;
     }
@@ -380,7 +382,7 @@ label span {
     }
 
     nav ul li a {
-        color: #fff;
+        color: #9e9e9e;
         font-size: 16px;
     }
     nav ul li a:hover {
