--- a/Ip project/Car-Sales/asset/inventory.css
+++ b/Ip project/Car-Sales/asset/inventory.css
@@ -349,7 +349,7 @@ label span {
     .checkbtn {
         display: inline;
         float: right;
-        margin-right: 3%;
+        margin-right: 2rem;
         margin-top: 2rem;
     }
     
@@ -361,12 +361,13 @@ label span {
         font-size: 16px;
         margin-left: 1rem;
         margin-top: 2rem;
+        margin-left: 2rem;
     }
     nav ul {
         position: fixed;
         width: 40%;
         height: 100vh;
-        top: 70px;
+        top: 76px;
         right: -100%;
         border-radius: 10px;
         text-align: center;
